pmdabpf: prototype Kepler module (sustainable-computing.io)

--- a/src/pmdas/bpf/bpf.conf
+++ b/src/pmdas/bpf/bpf.conf
@@ -147,3 +147,12 @@ enabled = false
 # uid           - int    - unset : Process UID to trace
 [netatop.so]
 enabled = true
+
+# This tool traces scheduling activity for use in power management.
+#
+# Configuration options:
+# Name              - type    - default
+#
+# process_count - int    - 20    : number of processes to keep in cache
+[kepler.so]
+enabled = true
